--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,4 @@
-LIBS=-lpthread
-INCLUDE=
 DEPS=-Wall -Wextra -march=native
-SLIBS=
 
 ifeq ($(D),1)
 OPTIMIZE=-O0
@@ -9,12 +6,13 @@ else
 OPTIMIZE=-O2
 endif
 
-SRC=processmon.c
-
-all: processmon
+all: processmon processget
 
 processmon:
-	gcc -g ${OPTIMIZE} ${DEPS} ${INCLUDE} ${LIBS} ${SRC} ${SLIBS} -o processmon
+	gcc -g ${OPTIMIZE} ${DEPS} processmon.c -o processmon
+
+processget:
+	gcc -g ${OPTIMIZE} ${DEPS} processget.c -o processget
 
 clean:
-	rm -f processmon
+	rm -f processmon processget
